--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
-<!doctype html>
 <html>
   <head>
+    <title>@clément</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="shadow-md">
-      <h1 class="text-3xl font-bold bg-blue-700 text-white">Evan</h1>
-      <p class=" ">
-        je suis fan de foot, je joue lateral au <a href="https://www.facebook.com/hmo.hmo.792">HMO</a>  
-      </p>
+    <div id="root" class="m-3">
+      <span class="rounded-md box-decoration-clone bg-gradient-to-r from-red-700 to-blue-800 text-white text-6xl p-2">
+        @Evan
+      </span>
+      <br />
+      <br />
 
-      <img src="./barcola.jpg" />
-        <img src="./logo-hmo.jpg" />
+      <div class="flex flex-wrap">
+        <!-- Image on the left -->
+        <img class="flex-none rounded-full" src="./barcola.jpg" />
+
+        <!-- Text on the right -->
+        <div class="w-1/2 ml-4">
+          <h2 class="text-blue-800 font-bold mb-4">Barcola</h2>
+          <p class="text-gray-700 italic font-mono p-3"><a href="https://fr.wikipedia.org/wiki/Bradley_Barcola">Bradley Barcola</a>, né le 2 septembre 2002 à Lyon, est un footballeur international français, qui évolue au poste d'ailier gauche au Paris Saint-Germain.  </p>
+        </div>
+      </div>
+      <br />
+      <div class="flex flex-col items-center">
+        <span>Mes sites préférés</span>
+        <ul class="list-disc list-inside">
+          <li><a href="https://www.lequipe.fr/" class="underline text-blue-800 hover:bg-red-700 hover:text-white">L'équipe</a></li>
+          <li><a href="https://www.instagram.com/evan.c_010/" class="underline text-blue-800 hover:bg-red-700 hover:text-white">Mon insta</a></li>
+        </ul>
+      </div>
+
+      <div id="footer" class="flex flex-col items-center m-4">
+        <img class="w-20" src="./logo-eove.png" />
+        <span class="text-xs italic text-gray-500">developpé avec peio, février 2024</span>
+      </div>
     </div>
-
-  </h1>
-</body>
+  </body>
 </html>
