--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>@clément</title>
+    <title>@Evan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -19,7 +19,7 @@
 
         <!-- Text on the right -->
         <div class="w-1/2 ml-4">
-          <h2 class="text-blue-800 font-bold mb-4">Barcola</h2>
+          <h2 class="text-blue-800 font-bold mb-4">Mon joueur préféré: Barcola</h2>
           <p class="text-gray-700 italic font-mono p-3"><a href="https://fr.wikipedia.org/wiki/Bradley_Barcola">Bradley Barcola</a>, né le 2 septembre 2002 à Lyon, est un footballeur international français, qui évolue au poste d'ailier gauche au Paris Saint-Germain.  </p>
         </div>
       </div>
