--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       </span>
       <br />
       <br />
+      <p class="text-gray-700 italic font-mono p-3">
+        Je joue latéral au <a href="https://www.facebook.com/hmo.hmo.792">HMO</a>
+      </p>
 
       <div class="flex flex-wrap">
         <!-- Image on the left -->
