--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div id="footer" class="flex flex-col items-center m-4">
         <img class="w-20" src="./logo-eove.png" />
-        <span class="text-xs italic text-gray-500">developpé avec peio, février 2024</span>
+        <span class="text-xs italic text-gray-500">developpé avec peio, novembre 2024</span>
       </div>
     </div>
   </body>
