--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <br />
       <p class="text-gray-700 italic font-mono p-3">
         Je joue latéral au <a href="https://www.facebook.com/hmo.hmo.792" class="underline text-blue-800 hover:bg-red-700 hover:text-white">HMO</a>
+        <img class="flex-none rounded-full w-20" src="./logo-hmo.jpg" />
       </p>
 
       <div class="flex flex-wrap">
